<resources>
    <string name="app_name">GTIME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="harmful">Токсичные</string>
    <string name="useful">Полезные</string>
    <string name="others">Другие</string>
    <string name="manageApps">Управление приложениями</string>
    <string name="changeMode">Сменить сложность</string>
    <string name="permission_message">Для того чтобы приложение работало корректно, вам необходимо предоставить доступ к данным использования приложений</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="canceled">Вам недоступна статистика :(</string>
    <string name="achievements">Достижения</string>
    <string name="mode">Сложность</string>
    <string name="normal">Нормальная</string>
    <string name="hardcore">Хардкор</string>
    <string name="home">Дом</string>
    <string name="join_with_yandex_id">Войти с Яндекс ID</string>
    <string name="log_out">Выйти</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="error_authorization">Ошибка авторизации</string>
    <string name="find_app">Найди приложение</string>
    <string name="multiplier">Множитель</string>
    <string name="scores">Очки</string>
    <string name="online_mode">Онлайн режим</string>
    <string name="shop">Магазин</string>
    <string name="tasks">Задания</string>
    <string name="daily_top">Дневной топ</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="create_or_sign_in">Создайте аккаунт или войдите в уже существующий</string>
    <string name="password_requires">Пароль должен иметь хотя бы 8 симоловов</string>
    <string name="account_created">Аккаунт успешно создан</string>
    <string name="sign_in_success">Вход в аккаунт произведен успешно</string>
    <string name="sign_in">Вход</string>
    <string name="hello_blank_fragment">HELLO</string>
    <string name="Buy">Купить</string>
    <string name="sucess_order">Покупка выполнена успешна</string>
    <string name="error_order">Ошибка при покупке</string>
    <string name="lack_of_coins">Недостаточно монет :(</string>
    <string name="claim">Забрать</string>
    <string name="auth_error">Вы не авторизованы</string>
    <string name="promo">Промокоды</string>
    <string name="copied_to_clipboard">Промокод скопирован</string>
</resources>