<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.gtime.general.ui.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_firstTimeFragment"
            app:destination="@id/firstTimeFragment" />
        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/firstTimeFragment"
        android:name="com.gtime.ui.FirstTimeFragment"
        android:label=""
        tools:layout="@layout/fragment_first_time" />
    <fragment
        android:id="@+id/appManagerFragment"
        android:name="com.gtime.offline_mode.ui.AppManagerFragment"
        android:label="@string/manageApps" />
    <fragment
        android:id="@+id/changeModeFragment"
        android:name="com.gtime.offline_mode.ui.ChangeModeFragment"
        android:label="@string/changeMode" />
    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.gtime.offline_mode.ui.AchievementsFragment"
        android:label="@string/achievements" />
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.gtime.online_mode.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.gtime.online_mode.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks" />
    <fragment
        android:id="@+id/topFragment"
        android:name="com.gtime.online_mode.TopFragment"
        android:label="Топ"
        tools:layout="@layout/fragment_top" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.gtime.online_mode.LoginFragment"
        android:label="LoginFragment" />
</navigation>