<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/topFragment"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:title="@string/top"/>
        <item
            android:id="@+id/shopFragment"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/shop" />
        <item
            android:id="@+id/tasksFragment"
            android:icon="@drawable/ic_baseline_task_alt_24"
            android:title="@string/tasks" />
    </group>
</menu>