<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="8dp">

        <RadioGroup
            android:layout_margin="8dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/mode" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorTertiary" />


            <RadioButton
                android:id="@+id/normal_mode_button"
                style="@style/Text.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/hardcore_mode_button"
                style="@style/Text.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hardcore" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>
</FrameLayout>