<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".ui.AppManagerFragment">

    <LinearLayout
        android:id="@+id/usefulLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textUseful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/useful"
            android:textSize="28sp"
            android:focusableInTouchMode="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUseful"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toxicLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textHarmful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/harmful"
            android:textSize="28sp"
            android:focusableInTouchMode="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHarmful"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:focusableInTouchMode="true">


        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autoCompleteTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find_app"
            android:focusableInTouchMode="true">

        </androidx.appcompat.widget.AppCompatAutoCompleteTextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOthers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"/>

    </LinearLayout>

</LinearLayout>