<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context="com.gtime.online_mode.ui.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/iv_circle_big_outline"
            android:clipToOutline="true"
            tools:targetApi="s" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTv"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:text="@string/create_or_sign_in"
            app:cornerRadius="8dp" />
    </LinearLayout>

</ScrollView>
